# data-mining-project

./: .pre-commit-config.yaml  .python-version  README.md  config.py  main.py  news_scrapper.py  notebook.ipynb  pyproject.toml
data/: 01-01-2021_28-02-2021_1653098708.765253.csv  01-01-2022_19-05-2022.csv  01-03-2021_24-05-2021_1653133800.101376.csv  01-03-2021_24-05-2021_1653133800.101376.txt  04-10-2021_15-10-2021_1653140951.647602.csv  04-10-2021_30-12-2021_1653170446.912782.csv  25-05-2021_03-10-2021_1653139342.037623.csv  31-12-2021_30-12-2021_1653175848.78439.csv  waterlogging_news_01-01-2021_19-05-2022.csv
scraper/: config.py  helpers.py  main.py  news_scraper.py
