[tool.poetry]
name = "data-mining-project"
version = "0.1.0"
description = ""
authors = ["luikymagno <luikymagno@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.2"
selenium = "^4.1.5"
beautifulsoup4 = "^4.11.1"
Unidecode = "^1.3.4"
tqdm = "^4.64.0"
webdriver-manager = "^3.5.4"
fake-useragent = "^0.1.11"
scipy = "^1.8.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
